--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -394,34 +394,40 @@
 }
 
 @misc{website:miljopakken,
-	author = "Miljøpakken",
 	title = "Miljøpakkens mål",
-	month = "November",
-	year = "2014",
-	howpublished = "\url{http://miljopakken.no/om-miljoepakken/maal}"
+	howpublished = "\url{http://miljopakken.no/om-miljoepakken/maal}",
+    note = {Accessed: November 2014} 
 }
 
 @misc{website:atb,
-    author = "AtB",
     title = "AtB",
-    month = "January",
-    year = "2014",
-    howpublished = "\url{http://www.atb.no}"
+    howpublished = "\url{http://www.atb.no}",
+    note = {Accessed: January 2015} 
 }
 @misc{website:neo4j,
-    author = "Neo Technology, Inc.",
     title = "Neo4j",
-    month = "February",
-    year = "2015",
-    howpublished = "\url{http://www.neo4j.com}"
+    howpublished = "\url{http://www.neo4j.com}",
+    note = {Accessed: February 2015}  
 }
 @misc{website:graphdbranking,
-    author = "DB-ENGINES",
     title = "DB-Engines Ranking of Graph DBMS",
-    month = "March",
-    year = "2015",
-    howpublished = "\url{http://db-engines.com/en/ranking/graph+dbms}"
-    
-    
+    howpublished = "\url{http://db-engines.com/en/ranking/graph+dbms}",
+    note = {Accessed: March 2015}      
 }
+@misc{website:amazon,
+    title = "Amazon {EC2} Instances",
+    howpublished = "\url{http://aws.amazon.com/ec2/instance-types/}", 
+    note = {Accessed: May 2015}   
+}
+@misc{website:maven,
+    title = "Apache Maven",
+    howpublished = "\url{https://maven.apache.org/}", 
+    note = {Accessed: May 2015}   
+}
+@misc{website:google,
+    title = "Google Cloud Platform: Machine Types",
+    howpublished = "\url{https://cloud.google.com/compute/docs/machine-types?hl=en_US&_ga=1.40008804.791529213.1430919997}",
+    note = {Accessed: May 2015}   
+}
+
 
