BR removed from the surface

--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -148,6 +148,7 @@
 \input{chapters/model/selectingNextNode}
 \input{chapters/model/createRouteSet}
 \input{chapters/model/routeSetEvaluation}
+\input{chapters/model/selectingAntsToBeFollowed}
 \input{chapters/model/evaporation}
 \input{chapters/model/conclusion}
 %\input{chapters/model/algorithm}
