--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -36,17 +36,15 @@
     %~    & 50 & 50 & 10\% & 0.5 & \textbf{90\%} & 11.372 $\pm$ 0.108 & 10.9 & 12.3 & -268.262 $\pm$ 2.449 & -281.82 & -251.27 \\
     %~    & 50 & 50 & 10\% & 0.5 & \textbf{99\%} & 11.303 $\pm$ 0.070 & 10.9 & 11.7 & -270.353 $\pm$ 1.641 & -279.70 & -261.02  \\
     %\hline
-    \emph{\color{blue}TODO} & & & & & &  &  & &  &   \\
     $i$ & 50 & \textbf{1} & 10\% & 0.5  & 12.373 $\pm$ 0.288 & 11.2 & 13.9& -163.041 $\pm$ 22.922 & -264.86 & -22.93  \\
     ~   & 50 &\textbf{10} & 10\% & 0.5  & 11.523 $\pm$ 0.108 & 11.1 & 12.4 & -258.946 $\pm$ 4.969 & -277.46& -221.18 \\
     ~   & 50 &\textbf{50} & 10\% & 0.5  & 11.397 $\pm$ 0.106 & 10.8 & 12.2 & -268.196 $\pm$ 2.362 & -281.20 & -249.13 \\
     ~   & 50 &\textbf{100} & 10\% & 0.5 & \textbf{11.178 $\pm$ 0.069} & \textbf{10.7} & \textbf{11.7} & \textbf{-274.218 $\pm$ 1.364} & \textbf{-279.77} & \textbf{-263.10} \\
     ~   & 50 &\textbf{125} & 10\% & 0.5 & 11.226 $\pm$ 0.071 & 10.9 & 11.7 & -272.719 $\pm$ 1.446 & -280.80 & -265.77  \\
     \hline
-    \emph{\color{blue}TODO} & & & & & &  &  & &  &   \\
-    $s$ & \textbf{10$^*$} & 50 & 10\% & 0.5  & - & - & - & - & -& - \\
-    ~ & \textbf{25$^*$} & 50 & 10\% & 0.5  & - & - & - & - & - & -  \\
-    ~ & \textbf{50} & 50 & 10\% & 0.5  & 11.324 $\pm$ 0.09 & 10.8 & 11.9 & -268.131 $\pm$ 2.592 & -279.70 & -248.58\\
+    $s$ & \textbf{10$^1$} & 50 & 10\% & 0.5 & 11.579 $\pm$ 0.148 & 10.9 & 12.5 & -252.958 $\pm$ 4.699& -274.63& -221.79 \\
+    ~ & \textbf{25$^2$} & 50 & 10\% & 0.5  & 11.445 $\pm$ 0.125 & 10.8 & 12.3 & -263.278 $\pm$ 2.564 & -275.08 & -248.67  \\
+    ~ & \textbf{50} & 50 & 10\% & 0.5  & 11.324 $\pm$ 0.090 & 10.8 & 11.9 & -268.131 $\pm$ 2.592 & -279.70 & -248.58\\
     ~ & \textbf{100} & 50 & 10\% & 0.5 & \textbf{11.248 $\pm$ 0.083} & \textbf{10.7} & \textbf{11.8} & \textbf{-272.367 $\pm$ 1.522} & \textbf{-278.45} & \textbf{-261.17}\\
     ~ & \textbf{150} & 50 & 10\% & 0.5  & 11.158 $\pm$ 0.075 & 10.6 & 11.5 & -274.543 $\pm$ 1.338 & -282.53 & -267.74\\
     %~ & \textbf{--} & 50 & 10\% & 0.5 & 10\% & - & - & - & - & - $\pm$ - & -& - & - &  & - $\pm$  \\
@@ -67,7 +65,8 @@
     %\item[$T^b$:] best $TOTFIT$ value (best possible $TOTFIT$ value: -315)
     %\item[$T^a$:] average $TOTFIT$ value
     %\item[$T^w$:] worst $TOTFIT$ value
-    \item[$^*$:] No ants satisfied the initial constraints (Constraints \vref{sec:algoConstraints})
+    \item[$^1$:] On average 16\% of the iterations of each run did not create any ants that satisfied the initial constraints (Constraints \vref{sec:algoConstraints})
+    \item[$^2$:] On average 0.5\% of the iterations of each run did not create any ants that satisfied the initial constraints (Constraints \vref{sec:algoConstraints})
     \end{itemize}
     \label{table:pm1}
 \end{sidewaystable}
