--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -94,8 +94,8 @@
     ~ & 10\% &\textbf{10\%} & 11.360 $\pm$ 0.067 & 10.8 & 12.0 & -268.016 $\pm$ 1.606 & -280.22 & -250.82 \\
     ~ & 10\% &\textbf{25\%} & 11.371 $\pm$ 0.070 & 10.9 & 12.2 & -269.622 $\pm$ 1.368 & -280.73 & -255.94 \\
     ~ & 10\% &\textbf{50\%} & 11.489 $\pm$ 0.088 & 11.0 & 12.6 & -265.178 $\pm$ 2.182 & -279.38 & -247.85 \\
-    ~ & 10\% &\textbf{75\%$^*$} & - & - & - & - & - & - \\
-    ~ & 10\% &\textbf{100\%$^*$} & - & - & - & - & - & - \\
+    ~ & 10\% &\textbf{75\%$^1$} & 11.378 $\pm$ 0.092 & 10.7 & 12.4 & -265.814 $\pm$ 2.401 & -278.32 & -239.78 \\
+    ~ & 10\% &\textbf{100\%$^2$} & 11.495 $\pm$ 0.082 & 11.0 & 12.6 & -264.149 $\pm$ 2.615 & -278.48 & -237.88 \\
     \hline
     \end{tabular}
     \caption {Steps with the corresponding results from the $CA$ and $AF$ parameter settings experiment (Sample size: 50)}
@@ -111,7 +111,8 @@
     \item[$CI_{(ATT)}$:] average $ATT$ value and Confidence Interval with a confidence level of 95\% ($ATT$)
     %\item[$\sigma_{(TF)}$:] Population Standard Deviation of $TOTFIT$
     \item[$CI_{(TF)}$:] average $TOTFIT$ value and Confidence Interval with a confidence level of 95\% ($TOTFIT$)
-    \item[$^*$:] No ants satisfied the initial constraints (Constraints \vref{sec:algoConstraints})
+    \item[$^1$:] On average 0.08\% of the iterations of each run did not create any ants that satisfied the initial constraints (Constraints \vref{sec:algoConstraints})
+    \item[$^2$:] On average 0.2\% of the iterations of each run did not create any ants that satisfied the initial constraints (Constraints \vref{sec:algoConstraints})
     \end{itemize}
     \label{table:pm2}
 \end{sidewaystable}
