--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -164,7 +164,7 @@
 \input{chapters/experimentsAndResults/performanceComparison_planAndSetup}
 \input{chapters/experimentsAndResults/scalabilityExperiments_planAndSetup}
 \input{chapters/experimentsAndResults/experimentalResults_parameterSettings}
-\input{chapters/experimentsAndResults/evaluatingIandS}
+%\input{chapters/experimentsAndResults/evaluatingIandS}
 \input{chapters/experimentsAndResults/experimentalResults_performanceComparison}
 \input{chapters/experimentsAndResults/experimentalResults_scalability}
 
