--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -16,8 +16,8 @@
       $s$ & \textbf{10$^1$} & 50 & 10\% & 0.5 & 11.579 $\pm$ 0.148 & 10.9 & 12.5 & -252.958 $\pm$ 4.699& -274.63& -221.79 \\
     ~ & \textbf{25$^2$} & 50 & 10\% & 0.5  & 11.445 $\pm$ 0.125 & 10.8 & 12.3 & -263.278 $\pm$ 2.564 & -275.08 & -248.67  \\
     ~ & \textbf{50} & 50 & 10\% & 0.5  & 11.324 $\pm$ 0.090 & 10.8 & 11.9 & -268.131 $\pm$ 2.592 & -279.70 & -248.58\\
-    ~ & \textbf{100} & 50 & 10\% & 0.5 & \textbf{11.248 $\pm$ 0.083} & \textbf{10.7} & \textbf{11.8} & \textbf{-272.367 $\pm$ 1.522} & \textbf{-278.45} & \textbf{-261.17}\\
-    ~ & \textbf{150} & 50 & 10\% & 0.5  & 11.158 $\pm$ 0.075 & 10.6 & 11.5 & -274.543 $\pm$ 1.338 & -282.53 & -267.74\\
+    ~ & \textbf{100} & 50 & 10\% & 0.5 & 11.248 $\pm$ 0.083 & 10.7 & 11.8 & -272.367 $\pm$ 1.522 & -278.45 & -261.17\\
+    ~ & \textbf{150} & 50 & 10\% & 0.5  & \textbf{11.158 $\pm$ 0.075} & \textbf{10.6} & \textbf{11.5} & \textbf{-274.543 $\pm$ 1.338} & \textbf{-282.53} & \textbf{-267.74}\\
     %~ & \textbf{--} & 50 & 10\% & 0.5 & 10\% & - & - & - & - & - $\pm$ - & -& - & - &  & - $\pm$  \\
     \hline
     $i$ & 50 & \textbf{1} & 10\% & 0.5  & 12.373 $\pm$ 0.288 & 11.2 & 13.9& -163.041 $\pm$ 22.922 & -264.86 & -22.93  \\
@@ -69,8 +69,8 @@
     %\item[$T^b$:] best $TOTFIT$ value (best possible $TOTFIT$ value: -315)
     %\item[$T^a$:] average $TOTFIT$ value
     %\item[$T^w$:] worst $TOTFIT$ value
-    \item[$^1$:] On average 16\% of the iterations of each run did not create any ants that satisfied the initial constraints (Constraints \vref{sec:algoConstraints})
-    \item[$^2$:] On average 0.5\% of the iterations of each run did not create any ants that satisfied the initial constraints (Constraints \vref{sec:algoConstraints})
+    \item[$^1$:] On average 16\% of the iterations of each run did not create any ants that satisfied the initial Constraint \ref{itm:criteriaConnectedGraph} described in Section \vref{sec:algoConstraints}.
+    \item[$^2$:] On average 0.5\% of the iterations of each run did not create any ants that satisfied the initial Constraint \ref{itm:criteriaConnectedGraph} described in Section \vref{sec:algoConstraints}.
     \end{itemize}
     \label{table:pm1}
 \end{sidewaystable}
@@ -115,8 +115,8 @@
     \item[$CI_{(ATT)}$:] average $ATT$ value and Confidence Interval with a confidence level of 95\% ($ATT$)
     %\item[$\sigma_{(TF)}$:] Population Standard Deviation of $TOTFIT$
     \item[$CI_{(TF)}$:] average $TOTFIT$ value and Confidence Interval with a confidence level of 95\% ($TOTFIT$)
-    \item[$^1$:] On average 0.08\% of the iterations of each run did not create any ants that satisfied the initial constraints (Constraints \vref{sec:algoConstraints})
-    \item[$^2$:] On average 0.2\% of the iterations of each run did not create any ants that satisfied the initial constraints (Constraints \vref{sec:algoConstraints})
+    \item[$^1$:] On average 0.08\% of the iterations of each run did not create any ants that satisfied the initial Constraint \ref{itm:criteriaConnectedGraph} described in Section \vref{sec:algoConstraints}.
+    \item[$^2$:] On average 0.2\% of the iterations of each run did not create any ants that satisfied the initial Constraint \ref{itm:criteriaConnectedGraph} described in Section \vref{sec:algoConstraints}.
     \end{itemize}
     \label{table:pm2}
 \end{sidewaystable}
