--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -9,68 +9,30 @@
 \begin{sidewaystable}
     %\centering
     %\hspace*{-0.5cm}
-    \begin{tabular}{|l|l|l|l|l||c|c|c|c|c|c|c|}
+    \begin{tabular}{|l|l|l|c||c|c|c|c|c|}
     \hline
-    ~ & $s$ & $i$ & $E$ & $p_{b}$ & $CI_{(A)}$ & $b_{(A)}$ & $w_{(A)}$ & $CI_{(TF)}$ & $b_{(TF)}$ & $w_{(TF)}$\\
+    ~ & $s$ & $i$ & $E$ & $AVG$ & $\sigma$ & $RSTD$ & BEST & WORST \\
     \hline
-      $s$ & \textbf{10$^1$} & 50 & 10\% & 0.5 & 11.579 $\pm$ 0.148 & 10.9 & 12.5 & -252.958 $\pm$ 4.699& -274.63& -221.79 \\
-    ~ & \textbf{25$^2$} & 50 & 10\% & 0.5  & 11.445 $\pm$ 0.125 & 10.8 & 12.3 & -263.278 $\pm$ 2.564 & -275.08 & -248.67  \\
-    ~ & \textbf{50} & 50 & 10\% & 0.5  & 11.324 $\pm$ 0.090 & 10.8 & 11.9 & -268.131 $\pm$ 2.592 & -279.70 & -248.58\\
-    ~ & \textbf{100} & 50 & 10\% & 0.5 & 11.248 $\pm$ 0.083 & 10.7 & 11.8 & -272.367 $\pm$ 1.522 & -278.45 & -261.17\\
-    ~ & \textbf{150} & 50 & 10\% & 0.5  & \textbf{11.158 $\pm$ 0.075} & \textbf{10.6} & \textbf{11.5} & \textbf{-274.543 $\pm$ 1.338} & \textbf{-282.53} & \textbf{-267.74}\\
-    %~ & \textbf{--} & 50 & 10\% & 0.5 & 10\% & - & - & - & - & - $\pm$ - & -& - & - &  & - $\pm$  \\
+    $s$ \\
+
     \hline
-    $i$ & 50 & \textbf{1} & 10\% & 0.5  & 12.373 $\pm$ 0.288 & 11.2 & 13.9& -163.041 $\pm$ 22.922 & -264.86 & -22.93  \\
-    ~   & 50 &\textbf{10} & 10\% & 0.5  & 11.523 $\pm$ 0.108 & 11.1 & 12.4 & -258.946 $\pm$ 4.969 & -277.46& -221.18 \\
-    ~   & 50 &\textbf{50} & 10\% & 0.5  & 11.297 $\pm$ 0.106 & 10.8 & 12.2 & -272.613 $\pm$ 2.362 & -281.20 & -249.13 \\
-    ~   & 50 &\textbf{100} & 10\% & 0.5 & \textbf{11.218 $\pm$ 0.069} & \textbf{10.7} & \textbf{11.7} & \textbf{-273.110 $\pm$ 1.364} & \textbf{-279.77} & \textbf{-263.10} \\
-    ~   & 50 &\textbf{125} & 10\% & 0.5 & 11.226 $\pm$ 0.071 & 10.9 & 11.7 & -272.719 $\pm$ 1.446 & -280.80 & -265.77  \\
-    \hline
-    $E$ & 50 & 50 & \textbf{1\%} & 0.1 & 11.333 $\pm$ 0.084 & 10.9 & 11.8 & -269.150 $\pm$ 2.317 & -279.77 & -248.42 \\
-    ~ & 50 & 50 & \textbf{10\%} & 0.5 & 11.402 $\pm$ 0.090 & 11.1 & 12.3 & -267.942 $\pm$ 2.237 & -278.29 & -254.21 \\
-    ~ & 50 & 50 & \textbf{25\%} & 0.5  & 11.312 $\pm$ 0.093 & 10.7 & 12.1 & -269.576 $\pm$ 2.423 & -279.70 & -250.41 \\
-    ~ & 50 & 50 & \textbf{50\%} & 0.5 & \textbf{11.307 $\pm$ 0.065} & \textbf{10.9} & \textbf{11.7} & \textbf{-270.387 $\pm$ 1.808}  & \textbf{-278.87} & \textbf{-259.73} \\
-    ~ & 50 & 50 & \textbf{75\%} & 0.5  & 11.293 $\pm$ 0.09 & 11.0 & 11.9 & -269.795 $\pm$ 1.954 & -279.83 & -257.92 \\
-    ~ & 50 & 50 & \textbf{90\%} & 0.5  & 11.389 $\pm$ 0.089 & 10.9 & 11.9 & -267.243 $\pm$ 2.129 & -275.34 & -243.93 \\
-    ~ & 50 & 50 & \textbf{99\%} & 0.5  & 11.413 $\pm$ 0.081 & 10.9 & 11.9 & -266.848 $\pm$ 3.042 & -282.08 & -247.42  \\
-    \hline
-    $p_{b}$ & 50 & 50 & 10\% & \textbf{0.0} & 11.407 $\pm$ 0.075 & 11.1 & 11.9 & -268.520 $\pm$ 2.176 & -277.39 & -250.82 \\
-    ~ & 50 & 50 & 10\% & \textbf{0.1} & 11.323 $\pm$ 0.101 & 10.7 & 12.2 & -267.255 $\pm$ 2.589 & -277.91 & -254.66 \\
-    ~ & 50 & 50 & 10\% & \textbf{0.3}& 11.347 $\pm$ 0.096 & 10.7 & 12.1 & -268.784 $\pm$ 1.930 & -277.90 & -253.78 \\
-    ~ & 50 & 50 & 10\% & \textbf{0.5}& 11.302 $\pm$ 0.087 & 10.9 & 11.9 & -269.279 $\pm$ 2.307 & -282.02 & -256.67\\
-    ~ & 50 & 50 & 10\% & \textbf{0.7}& 11.328 $\pm$ 0.081 & 11.0 & 11.8 & -268.216 $\pm$ 1.988 & -279.13 & -257.16\\
-    ~ & 50 & 50 & 10\% & \textbf{0.9} & \textbf{11.314 $\pm$ 0.097} & \textbf{10.6} & \textbf{11.9} & \textbf{-269.631 $\pm$ 1.489} & \textbf{-277.29} & \textbf{-260.53}\\
-    
-    
-    %$BR$ & 50 & 50 & 10\% & 0.5 & \textbf{1\%} & 11.312 $\pm$ 0.079 & 10.8 & 11.7 & -267.670 $\pm$ 1.725 & -280.03 & -259.27 \\
-    %~    & 50 & 50 & 10\% & 0.5 & \textbf{10\%} & 11.357 $\pm$ 0.085 & 10.7 & 12.0 & -268.188 $\pm$ 1.927 & -278.55 & -255.38 \\
-    %~    & 50 & 50 & 10\% & 0.5 & \textbf{25\%} & \textbf{11.276 $\pm$ 0.066} & \textbf{10.} & \textbf{11.6} & \textbf{-270.375 $\pm$ 1.859} & \textbf{-279.96} & \textbf{-259.48} \\
-    %~    & 50 & 50 & 10\% & 0.5 & \textbf{50\%} & 11.328 $\pm$ 0.075 & 10.9 & 11.8 & -269.542 $\pm$ 2.033 & -281.95 & -257.93 \\
-    %~    & 50 & 50 & 10\% & 0.5 & \textbf{75\%} & 11.385 $\pm$ 0.084 & 10.8 & 11.9 & -268.295 $\pm$ 1.769 & -276.49 & -253.59 \\
-    %~    & 50 & 50 & 10\% & 0.5 & \textbf{90\%} & 11.372 $\pm$ 0.108 & 10.9 & 12.3 & -268.262 $\pm$ 2.449 & -281.82 & -251.27 \\
-    %~    & 50 & 50 & 10\% & 0.5 & \textbf{99\%} & 11.303 $\pm$ 0.070 & 10.9 & 11.7 & -270.353 $\pm$ 1.641 & -279.70 & -261.02  \\
-    %\hline
+    $i$ \\
  
+    \hline
+    $E$ \\
   
     \hline
     \end{tabular}
     \caption {Steps with the corresponding results from the parameter settings experiment (sample size: 30)}
     \tiny
     \begin{itemize}[noitemsep]
-    \item[$A$ :] Average Travel Time ($ATT$)
-    \item[$TF$ :] Total Fitness function($TOTFIT$)
-    \item[$b$ :] Best produced result
-    \item[$w$ :] Worst produced result
-    %\item[$\sigma$:] Population Standard Deviation 
-    \item[$CI$ :] Average produced results with Confidence Interval (confidence level: 95\%)
-    %\item[$A^b$:] best $ATT$ value
-    %\item[$A^a$:] average $ATT$ value
-    %\item[$A^w$:] worst $ATT$ value
-    %\item[$T^b$:] best $TOTFIT$ value (best possible $TOTFIT$ value: -315)
-    %\item[$T^a$:] average $TOTFIT$ value
-    %\item[$T^w$:] worst $TOTFIT$ value
-    \item[$^1$:] On average 16\% of the iterations of each run did not create any ants that satisfied the initial Constraint \ref{itm:criteriaConnectedGraph} described in Section \vref{sec:algoConstraints}.
-    \item[$^2$:] On average 0.5\% of the iterations of each run did not create any ants that satisfied the initial Constraint \ref{itm:criteriaConnectedGraph} described in Section \vref{sec:algoConstraints}.
+    \item[$TOTFIT$ :] Total Fitness function($TOTFIT$)
+    \item[$AVG$ :] Average produced $TOTFIT$ with Confidence Interval (confidence level: 95\%)
+    \item[$BEST$ :] Best produced result
+    \item[$WORST$ :] Worst produced result
+    \item[$\sigma$:] Population Standard Deviation 
+    \item[$RSTD$ :] Relative Standard Deviation 
+    %\item[$^1$:] On average \% of the iterations of each run did not create any ants that satisfied the initial Constraint \ref{itm:criteriaConnectedGraph} described in Section \vref{sec:algoConstraints}.
     \end{itemize}
     \label{table:pm1}
 \end{sidewaystable}
@@ -78,45 +40,31 @@
 %CA OG FA
 \begin{sidewaystable}
     %\centering
-    %\hspace*{-0.7cm}
-    \begin{tabular}{|l|l|l||c|c|c|c|c|c|}
+    %\hspace*{-0.5cm}
+    \begin{tabular}{|l|l|l|c||c|c|c|c|c|}
     \hline
-    ~ & $AF$ & $CA$ & $CI_{(ATT)}$ & $b_{(ATT)}$ & $w_{(ATT)}$ & $CI_{(TF)}$ & $b_{(TF)}$ & $w_{(TF)}$ \\
+    ~ & $CA$ & $AF$ & $p_b$ & $AVG$ & $\sigma$ & $RSTD$ & BEST & WORST \\
     \hline
-    $AF$ & \textbf{0\%} & 10\% & 11.326 $\pm$ 0.071 & 10.7 & 12.0 & -268.581 $\pm$ 1.672 & -278.36 & -253.59\\ 
-    ~ & \textbf{1\%} & 10\% & 11.332 $\pm$ 0.066 & 10.9 & 12.2 & -268.400 $\pm$ 1.868  & -281.18 & -254.74 \\
-    ~ & \textbf{5\%} & 10\% & 11.387 $\pm$ 0.068 & 10.8 & 12.0 & -268.087 $\pm$ 1.551 & -277.78 & -252.78 \\ 
-    ~ & \textbf{10\%} & 10\% & 11.380 $\pm$ 0.075 & 10.7 & 12.2 & -268.913 $\pm$ 1.905 & -279.13 & -246.12 \\ 
-    ~ & \textbf{25\%} & 10\% & \textbf{11.366 $\pm$ 0.013} & \textbf{11.3} & \textbf{11.4} & \textbf{-272.392 $\pm$ 0.108} & \textbf{-272.92} & \textbf{-272.00}\\
-    ~ & \textbf{50\%} & 10\% & 11.327 $\pm$ 0.058 & 10.8 & 11.8 & -267.70 $\pm$ 2.087 & -281.12& -239.94 \\ 
-    ~ & \textbf{75\%} & 10\% & 11.416 $\pm$ 0.081 & 10.8 & 12.4 & -266.33 $\pm$ 1.974 & -278.48 & -245.41 \\ 
-    ~ & \textbf{100\%} & 10\% & 11.776 $\pm$ 0.122 & 11.0 & 12.8 & -238.18 $\pm$ 5.692& -279.25 & -179.02 \\ 
+    $CA$ \\
+
     \hline
-    $CA$ & 10\% &\textbf{0\%} & 11.320 $\pm$ 0.070 & 10.9 & 12.0 & -268.291 $\pm$ 1.823 & -278.74 & -250.66 \\
-    ~ & 10\% &\textbf{1\%} & 11.330 $\pm$ 0.069 & 10.9 & 12.1 & -268.608 $\pm$ 1.600 & -281.53 & -248.49 \\
-    ~ & 10\% &\textbf{5\%} & \textbf{11.308 $\pm$ 0.067} & \textbf{10.6} & \textbf{11.9} & \textbf{-269.272 $\pm$ 1.553} & \textbf{-278.99} & \textbf{-254.14} \\
-    ~ & 10\% &\textbf{10\%} & 11.360 $\pm$ 0.067 & 10.8 & 12.0 & -268.016 $\pm$ 1.606 & -280.22 & -250.82 \\
-    ~ & 10\% &\textbf{25\%} & 11.371 $\pm$ 0.070 & 10.9 & 12.2 & -269.622 $\pm$ 1.368 & -280.73 & -255.94 \\
-    ~ & 10\% &\textbf{50\%} & 11.489 $\pm$ 0.088 & 11.0 & 12.6 & -265.178 $\pm$ 2.182 & -279.38 & -247.85 \\
-    ~ & 10\% &\textbf{75\%$^1$} & 11.378 $\pm$ 0.092 & 10.7 & 12.4 & -265.814 $\pm$ 2.401 & -278.32 & -239.78 \\
-    ~ & 10\% &\textbf{100\%$^2$} & 11.495 $\pm$ 0.082 & 11.0 & 12.6 & -264.149 $\pm$ 2.615 & -278.48 & -237.88 \\
+    $AF$ \\
+ 
+    \hline
+    $p_b$ \\
+  
     \hline
     \end{tabular}
-    \caption {Steps with the corresponding results from the $CA$ and $AF$ parameter settings experiment (Sample size: 50)}
+    \caption {Steps with the corresponding results from the parameter CA, AF and pb experiments}
     \tiny
     \begin{itemize}[noitemsep]
-    \item[$b_{(ATT)}$:] best $ATT$ value
-    %\item[$a_{(ATT)}$:] average $ATT$ value
-    \item[$w_{(ATT)}$:] worst $ATT$ value
-    \item[$b_{(TF)}$:] best $TOTFIT$ value (best possible $TOTFIT$ value: -315)
-    %\item[$a_{(TF)}$:] 
-    \item[$w_{(TF)}$:] worst $TOTFIT$ value
-    %\item[$\sigma_{(ATT)}$:] Population Standard Deviation of $ATT$
-    \item[$CI_{(ATT)}$:] average $ATT$ value and Confidence Interval with a confidence level of 95\% ($ATT$)
-    %\item[$\sigma_{(TF)}$:] Population Standard Deviation of $TOTFIT$
-    \item[$CI_{(TF)}$:] average $TOTFIT$ value and Confidence Interval with a confidence level of 95\% ($TOTFIT$)
-    \item[$^1$:] On average 0.08\% of the iterations of each run did not create any ants that satisfied the initial Constraint \ref{itm:criteriaConnectedGraph} described in Section \vref{sec:algoConstraints}.
-    \item[$^2$:] On average 0.2\% of the iterations of each run did not create any ants that satisfied the initial Constraint \ref{itm:criteriaConnectedGraph} described in Section \vref{sec:algoConstraints}.
+    \item[$TOTFIT$ :] Total Fitness function($TOTFIT$)
+    \item[$AVG$ :] Average produced $TOTFIT$ with Confidence Interval (confidence level: 95\%)
+    \item[$BEST$ :] Best produced result
+    \item[$WORST$ :] Worst produced result
+    \item[$\sigma$:] Population Standard Deviation 
+    \item[$RSTD$ :] Relative Standard Deviation 
+    %\item[$^1$:] On average \% of the iterations of each run did not create any ants that satisfied the initial Constraint \ref{itm:criteriaConnectedGraph} described in Section \vref{sec:algoConstraints}.
     \end{itemize}
     \label{table:pm2}
 \end{sidewaystable}
@@ -128,10 +76,10 @@
     \centering
     \begin{tabular}{|l|llllllll|}
     \hline
-    Route 1: & 1 & 2 & 5 & 4 & 6 & 8 & 10 & 7 \\
-    Route 2: & 1 & 2 & 3 & 6 & 8 & 15 & 7 & 10 \\
-    Route 3: & 12 & 11 & 10 & 14 & 13 &  &  & \\
-    Route 4: & 9 & 15 & 7 & 10 & 11 & 12 & 4 & 2 \\
+    %Route 1: & 1 & 2 & 5 & 4 & 6 & 8 & 10 & 7 \\
+    %Route 2: & 1 & 2 & 3 & 6 & 8 & 15 & 7 & 10 \\
+    %Route 3: & 12 & 11 & 10 & 14 & 13 &  &  & \\
+    %Route 4: & 9 & 15 & 7 & 10 & 11 & 12 & 4 & 2 \\
     \hline
     \end{tabular}
     \caption {Representation of the best route set, having four routes, constructed by ACO}
@@ -145,20 +93,20 @@
     \hline
     Algorithm & $d_0(\%)$ & $d_1(\%)$ & $d_2(\%)$ & $d_{unsat}(\%)$ & $ATT$ \\
     \hline
-    ACO Best & 86.16 & 12.59 & 2.25 & 0.00 & 11.16 \\
-    ACO Average & 72.14 & 24.00 & 3.66 & 0.20 & 11.97 \\
-    ACO Median & 72.67 & 23.57 & 3.37 & 0.00 & 11.77 \\
-    ACO Worst & 54.79 & 35.13 & 10.08 & 0.00 & 11.97 \\
-    ACO Standard Deviation & 6.22 & 5.40 & 2.26 & 0.52 & 0.62 \\
-    ACO Relative Standard Deviation & 8.62 & 22.49 & 61.73 & 255.31 & 5.18 \\
+    %ACO Best & 86.16 & 12.59 & 2.25 & 0.00 & 11.16 \\
+    %ACO Average & 72.14 & 24.00 & 3.66 & 0.20 & 11.97 \\
+    %ACO Median & 72.67 & 23.57 & 3.37 & 0.00 & 11.77 \\
+    %ACO Worst & 54.79 & 35.13 & 10.08 & 0.00 & 11.97 \\
+    %ACO Standard Deviation & 6.22 & 5.40 & 2.26 & 0.52 & 0.62 \\
+    %ACO Relative Standard Deviation & 8.62 & 22.49 & 61.73 & 255.31 & 5.18 \\
     \hline
     \hline
-    SSO Best & 88.44 & 10.28 & 1.29 & 0.00 & 10.67 \\
-    SSO Average & 77.32 & 20.15 & 2.47 & 0.07 & 11.27 \\
-    SSO Median & 77.14 & 20.49 & 2.25 & 0.00 & 11.26 \\
-    SSO Worst & 68.77 & 28.84 & 2.25 & 0.13 & 11.67 \\
-    SSO Standard Deviation & 3.91 & 3.60 & 1.36 & 0.19 & 0.22 \\
-    SSO Relative Standard Deviation & 5.06\% & 17.85\% & 55.16\% & 291.28\% & 1.97\% \\
+    %SSO Best & 88.44 & 10.28 & 1.29 & 0.00 & 10.67 \\
+    %SSO Average & 77.32 & 20.15 & 2.47 & 0.07 & 11.27 \\
+    %SSO Median & 77.14 & 20.49 & 2.25 & 0.00 & 11.26 \\
+    %SSO Worst & 68.77 & 28.84 & 2.25 & 0.13 & 11.67 \\
+    %SSO Standard Deviation & 3.91 & 3.60 & 1.36 & 0.19 & 0.22 \\
+    %SSO Relative Standard Deviation & 5.06\% & 17.85\% & 55.16\% & 291.28\% & 1.97\% \\
     \hline
     \end{tabular}
     \caption {Comparing the route sets of ACO and SSO, having four routes, all results}
