--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -15,10 +15,13 @@
     \hline
     $s$ & 10$^1$ & 50 & 0.0 & 117.244$^1$ $\pm$ 3.854 & 10.77 & 9.186 & 88.364 & 137.997\\
     ~ & 50 & 10 & 0.0 & 105.424 $\pm$ 2.369 & 6.619 & 6.278 & 90.076 & 114.843\\
-
+    ~ & 100 & 50 & 0.0 & 99.318 $\pm$ 2.336 & 6.192 & 6.235 & 87.178 & 108.688\\
+    ~ & 125 & 50 & 0.0 & 99.082 $\pm$ 2.459 & 4.859 & 4.904 & 85.208 & 105.908\\
     \hline
     $i$ & 50 & 10 & 0.0 & 113.209 $\pm$ 3.205 & 8.957 & 7.912 & 94.551 & 130.521\\
     ~ & 50 & 50 & 0.0 & 105.044 $\pm$ 2.667 & 7.454 & 7.096 & 90.293 & 120.946\\
+    ~ & 50 & 100 & 0.0 & 100.855 $\pm$ 1.995 & 5.09 & 5.047 & 82.183 & 109.379\\
+    ~ & 50 & 125 & 0.0 & 95.241 $\pm$ 2.716 & 6.349 & 6.666 & 82.709 & 107.362\\
     \hline
     $E$ & 50 & 50 & 10\% & 104.395 $\pm$ 2.125 & 5.938 & 5.688 & 92.757 & 115.734\\
     ~ & 50 & 50 & 25\% & 103.274 $\pm$ 2.998 & 8.379 & 8.113 & 86.917 & 120.811\\
@@ -62,8 +65,17 @@
     ~ & 10\% & 50\% & 0.0 & 106.327 $\pm$ 2.214 & 7.986 & 7.511 & 89.808 & 119.931\\
     ~ & 10\% & 100\% & 0.0 & 120.245 $\pm$ 3.546 & 12.792 & 10.638 & 94.116 & 145.6\\
     \hline
-    $p_b$ \\
-  
+    $p_b$ & 10\% & 25\% & 0.0 & 104.861 $\pm$ 2.841 & 7.938 & 7.57 & 88.867 & 117.717\\
+    ~ & 10\% & 25\% & 0.1 & 105.613 $\pm$ 2.196 & 6.137 & 5.811 & 95.919 & 120.041\\
+    ~ & 10\% & 25\% & 0.5 & 103.646 $\pm$ 3.228 & 9.022 & 8.705 & 79.958 & 116.265\\
+    ~ & 10\% & 25\% & 0.9 & 103.682 $\pm$ 2.379 & 6.649 & 6.413 & 91.0 & 115.468\\
+    ~ & 10\% & 25\% & 1.3 & 104.228 $\pm$ 2.892 & 8.081 & 7.753 & 89.238 & 117.242\\
+    \hline
+    ~ & 10\% & 5\% & 0.0 & 104.882 $\pm$ 2.408 & 6.728 & 6.415 & 78.721 & 113.019\\
+    ~ & 10\% & 5\% & 0.1 & 103.192 $\pm$ 2.837 & 7.928 & 7.683 & 81.306 & 115.088\\
+    ~ & 10\% & 5\% & 0.5 & 104.101 $\pm$ 2.303 & 6.435 & 6.181 & 89.282 & 116.23\\
+    ~ & 10\% & 5\% & 0.9 & 102.579 $\pm$ 2.558 & 7.147 & 6.967 & 85.033 & 115.895\\
+    ~ & 10\% & 5\% & 1.3 & 103.058 $\pm$ 1.665 & 4.653 & 4.515 & 92.982 & 111.865\\
     \hline
     \end{tabular}
     \caption {Steps with the corresponding results from the parameter CA, AF and pb experiments}
