--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -11,7 +11,7 @@
     %\hspace*{-0.5cm}
     \begin{tabular}{|l|l|l|c||c|c|c|c|}
     \hline
-    ~ & $s$ & $i$ & $E$ & $AVG$ & $STD$ & BEST & WORST \\
+    Parameter & $s$ & $i$ & $E$ & $AVG$ & $STD$ & BEST & WORST \\
     \hline
     $s$ & 10$^1$ & 50 & 10\% & 117.244$^1$ $\pm$ 3.854 & 10.700 & 88.364 & 137.997\\
     ~ & 50 & 50 & 10\% & 105.424 $\pm$ 2.369 & 6.619 & 90.076 & 114.843\\
@@ -52,7 +52,7 @@
     %\hspace*{-0.5cm}
     \begin{tabular}{|l|l|l|c||c|c|c|c|c|}
     \hline
-    ~ & $CA$ & $AF$ & $p_b$ & $AVG$ & $STD$ &BEST & WORST \\
+    Parameter & $CA$ & $AF$ & $p_b$ & $AVG$ & $STD$ &BEST & WORST \\
     \hline
     $CA$ & 0\% & 10\% & 0.0 & 105.66 $\pm$ 1.917 & 6.915 & 89.463 & 118.669\\
     ~ & 5\% & 10\% & 0.0 & 104.581 $\pm$ 1.576 & 5.686 & 93.975 & 119.024\\
@@ -62,22 +62,22 @@
     ~ & 100\% & 10\% & 0.0 & 110.135 $\pm$ 2.26 & 8.153 & 91.194 & 125.927\\
     \hline
     $AF$ & 10\% & 0\% & 0.0 & 105.747 $\pm$ 1.487 & 5.364& 89.031 & 114.771\\
-    ~ & 5\% & 5\% & 0.0 & \textbf{104.389 $\pm$ 1.733} & \textbf{6.252}& \textbf{92.358} & \textbf{118.361}\\
+    ~ & 10\% & 5\% & 0.0 & \textbf{104.389 $\pm$ 1.733} & \textbf{6.252}& \textbf{92.358} & \textbf{118.361}\\
     ~ & 10\% & 10\% & 0.0 & 104.739 $\pm$ 1.861 & 6.714 & 91.345 & 123.648\\
     ~ & 10\% & 25\% & 0.0 & 104.632 $\pm$ 1.747 & 6.302 & 87.838 & 118.012\\
     ~ & 10\% & 50\% & 0.0 & 106.327 $\pm$ 2.214 & 7.986 & 89.808 & 119.931\\
     ~ & 10\% & 100\% & 0.0 & 120.245 $\pm$ 3.546 & 12.792 & 94.116 & 145.600\\
     \hline
-    $p_b$ & 10\% & 25\% & 0.0 & 104.861 $\pm$ 2.841 & 7.938 & 88.867 & 117.717\\
-    ~ & 10\% & 25\% & 0.1 & 105.613 $\pm$ 2.196 & 6.137 & 95.919 & 120.041\\
-    ~ & 10\% & 25\% & 0.5 & 103.646 $\pm$ 3.228 & 9.022 & 79.958 & 116.265\\
-    ~ & 10\% & 25\% & 0.9 & 103.682 $\pm$ 2.379 & 6.649 & 91.000 & 115.468\\
-    ~ & 10\% & 25\% & 1.3 & 104.228 $\pm$ 2.892 & 8.081 & 89.238 & 117.242\\
-    ~ & 10\% & 5\% & 0.0 & 104.882 $\pm$ 2.408 & 6.728 & 78.721 & 113.019\\
+    $p_b$ & 10\% & 5\% & 0.0 & 104.882 $\pm$ 2.408 & 6.728 & 78.721 & 113.019\\
     ~ & 10\% & 5\% & 0.1 & 103.192 $\pm$ 2.837 & 7.928 & 81.306 & 115.088\\
     ~ & 10\% & 5\% & 0.5 & 104.101 $\pm$ 2.303 & 6.435 &89.282 & 116.23\\
     ~ & 10\% & 5\% & 0.9 & \textbf{102.579 $\pm$ 2.558} & \textbf{7.147} & \textbf{85.033} & \textbf{115.895}\\
     ~ & 10\% & 5\% & 1.3 & 103.058 $\pm$ 1.665 & 4.653 & 92.982 & 111.865\\
+    ~ & 10\% & 25\% & 0.0 & 104.861 $\pm$ 2.841 & 7.938 & 88.867 & 117.717\\
+    ~ & 10\% & 25\% & 0.1 & 105.613 $\pm$ 2.196 & 6.137 & 95.919 & 120.041\\
+    ~ & 10\% & 25\% & 0.5 & 103.646 $\pm$ 3.228 & 9.022 & 79.958 & 116.265\\
+    ~ & 10\% & 25\% & 0.9 & 103.682 $\pm$ 2.379 & 6.649 & 91.000 & 115.468\\
+    ~ & 10\% & 25\% & 1.3 & 104.228 $\pm$ 2.892 & 8.081 & 89.238 & 117.242\\
     \hline
     \end{tabular}
     \caption {Steps with the corresponding results from the parameter settings experiments (parameter $CA$, $AF$ and $p_b$)}
