--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -252,11 +252,9 @@
 }
 
 @misc{website:neo,
-    author = "NEO",
     title = "Vehicle Routing Problem",
-    month = "January",
-    year = "2013",
-    howpublished = "\url{http://neo.lcc.uma.es/vrp}"
+    howpublished = "\url{http://neo.lcc.uma.es/vrp}",
+    note = {Accessed: January 2015} 
 }
 
 
