--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -170,7 +170,7 @@
 \chapter{Evaluation and Conclusion}
 \label{evaluationAndConclusion}
 \input{chapters/evaluationAndConclusion/evaluation}
-\input{chapters/evaluationAndConclusion/evaluatingMethods}
+%\input{chapters/evaluationAndConclusion/evaluatingMethods}
 \input{chapters/evaluationAndConclusion/evaluatingPerformanceComparison}
 \input{chapters/evaluationAndConclusion/evaluatingScalability}
 \input{chapters/evaluationAndConclusion/evaluatingNeo4j}
