--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -156,15 +156,18 @@
 \chapter{Experiments and Results}
 \label{experimentsAndResults}
 \input{chapters/experimentsAndResults/experimentsAndResults}
-\input{chapters/experimentsAndResults/experimentalPlan}
+%\input{chapters/experimentsAndResults/experimentalPlan}
 %\input{chapters/experimentsAndResults/performanceCriteria}
-\input{chapters/experimentsAndResults/experimentalSetup}
+%\input{chapters/experimentsAndResults/experimentalSetup}
 \input{chapters/experimentsAndResults/developmentEnvironment}
 \input{chapters/experimentsAndResults/parameterSettings_planAndSetup}
-\input{chapters/experimentsAndResults/performanceComparison_planAndSetup}
-\input{chapters/experimentsAndResults/scalabilityExperiments_planAndSetup}
 \input{chapters/experimentsAndResults/experimentalResults_parameterSettings}
+
+
+\input{chapters/experimentsAndResults/performanceComparison_planAndSetup}
 \input{chapters/experimentsAndResults/experimentalResults_performanceComparison}
+
+\input{chapters/experimentsAndResults/scalabilityExperiments_planAndSetup}
 \input{chapters/experimentsAndResults/experimentalResults_scalability}
 
 \chapter{Evaluation and Conclusion}
