--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -67,8 +67,8 @@
     ~ & 10\% & \textbf{100\%} & 0.0 & 120.245 $\pm$ 3.546 & 12.792 & 94.116 & 145.600\\
     \hline
     $p_b$ & 10\% & 5\% & \textbf{0.0} & 104.882 $\pm$ 2.408 & 6.728 & 78.721 & 113.019\\
-    ~ & 10\% & 5\% & \textbf{0.1} & 103.192 $\pm$ 2.837 & 7.928 & 81.306 & 115.088\\
-    ~ & 10\% & 5\% & \textbf{0.5} & 104.101 $\pm$ 2.303 & 6.435 &89.282 & 116.23\\
+    ~ & 10\% & 5\% & \textbf{0.1} & 104.101 $\pm$ 2.303 & 6.435 &89.282 & 116.23\\
+    ~ & 10\% & 5\% & \textbf{0.5} & 103.192 $\pm$ 2.837 & 7.928 & 81.306 & 115.088\\
     ~ & 10\% & 5\% & \textbf{0.9} & \textbf{102.579 $\pm$ 2.558} & \textbf{7.147} & \textbf{85.033} & \textbf{115.895}\\
     ~ & 10\% & 5\% & \textbf{1.3} & 103.058 $\pm$ 1.665 & 4.653 & 92.982 & 111.865\\
    % ~ & 10\% & 25\% & 0.0 & 104.861 $\pm$ 2.841 & 7.938 & 88.867 & 117.717\\
@@ -93,6 +93,7 @@
 
 
 \section{Performance Comparison Results}
+\label{sec:performanceComparisonAppendix}
 %Best Ants Route: {[6,8,15,7,10,11,12,4,][1,2,3,6,8,15,9,][1,2,4,12,11,13,14,10,][1,2,5,4,6,8,10,11,]}
 \begin{table}[H]
     \centering
