--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -177,6 +177,9 @@
 \input{chapters/evaluationAndConclusion/evaluatingPerformanceComparison}
 \input{chapters/evaluationAndConclusion/evaluatingScalability}
 \input{chapters/evaluationAndConclusion/evaluatingNeo4j}
+%\input{chapters/evaluationAndConclusion/discussion}
+\input{chapters/evaluationAndConclusion/discussingSSO}
+\input{chapters/evaluationAndConclusion/discussingScalability}
 \input{chapters/evaluationAndConclusion/discussion}
 \input{chapters/evaluationAndConclusion/contributions}
 \input{chapters/evaluationAndConclusion/futurework}
