--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -176,7 +176,7 @@
 %\input{chapters/evaluationAndConclusion/evaluatingMethods}
 \input{chapters/evaluationAndConclusion/evaluatingPerformanceComparison}
 \input{chapters/evaluationAndConclusion/evaluatingScalability}
-\input{chapters/evaluationAndConclusion/evaluatingNeo4j}
+%\input{chapters/evaluationAndConclusion/evaluatingNeo4j}
 %\input{chapters/evaluationAndConclusion/discussion}
 \input{chapters/evaluationAndConclusion/discussingSSO}
 \input{chapters/evaluationAndConclusion/discussingScalability}
