--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -427,5 +427,9 @@
     howpublished = "\url{https://cloud.google.com/compute/docs/machine-types?hl=en_US&_ga=1.40008804.791529213.1430919997}",
     note = {Accessed: May 2015}   
 }
-
+@misc{website:rutebok,
+    title = "Holdeplasser i Trondheim",
+    howpublished = "\url{http://www.rutebok.no/nriiisstatictables/tables/ruter/kommune/KO001601.htm}",
+    note = {Accessed: May 2015}   
+}
 
