--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -433,3 +433,9 @@
     note = {Accessed: May 2015}   
 }
 
+@misc{website:atb-linjenett,
+    title = "AtBs linjenett",
+    howpublished = "\url{http://no.wikipedia.org/wiki/AtBs_linjenett}",
+    note = {Accessed: May 2015}   
+}
+
