--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -175,11 +175,12 @@
 \input{chapters/evaluationAndConclusion/evaluation}
 %\input{chapters/evaluationAndConclusion/evaluatingMethods}
 \input{chapters/evaluationAndConclusion/evaluatingPerformanceComparison}
+%\input{chapters/evaluationAndConclusion/evaluatingPerformanceComparisonV2}
 \input{chapters/evaluationAndConclusion/evaluatingScalability}
 %\input{chapters/evaluationAndConclusion/evaluatingNeo4j}
 %\input{chapters/evaluationAndConclusion/discussion}
 \input{chapters/evaluationAndConclusion/discussingSSO}
-\input{chapters/evaluationAndConclusion/discussingScalability}
+\input{chapters/evaluationAndConclusion/discussingScalabilityV2}
 \input{chapters/evaluationAndConclusion/conclusion}
 \input{chapters/evaluationAndConclusion/contributions}
 \input{chapters/evaluationAndConclusion/futurework}
