--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -438,4 +438,25 @@
     howpublished = "\url{http://no.wikipedia.org/wiki/AtBs_linjenett}",
     note = {Accessed: May 2015}   
 }
+@misc{website:telenor,
+    title = "Telenor",
+    howpublished = "\url{http://www.telenor.no/}",
+    note = {Accessed: May 2015}   
+}
+@misc{website:cisco,
+    title = "Cisco",
+    howpublished = "\url{http://www.cisco.com/}",
+    note = {Accessed: May 2015}   
+}
+@misc{website:walmart,
+    title = "Walmart",
+    howpublished = "\url{http://www.walmart.com/}",
+    note = {Accessed: May 2015}   
+}
+@misc{website:stackoverflow,
+    title = "Stack Overflow",
+    howpublished = "\url{http://stackoverflow.com/}",
+    note = {Accessed: May 2015}   
+}
+
 
