--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,3 +1,11 @@
+@article{dorigo06,
+    author    = "Marco Dorigo,  Mauro Birattari and Thomas Stützle ",
+    title     = "Ant Colony Optimization: Artificial Ants as a Computational Intelligence Technique",
+    journal   = "IEEE COMPUTATIONAL INTELLIGENCE MAGAZINE",
+    pages     = "28-39",
+    year      = "2006",
+}
+
 @unpublished{dobslaw09,
     author  = "Felix Dobslaw",
     title   = "A Parameter Tuning Framework for Metaheuristics Based on Design of Experiments and Artificial Neural Networks",
