report and bibl

--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -17,7 +17,7 @@
 \usepackage[section]{placeins}
 \usepackage{mathtools}
 \usepackage{amsmath}
-\usepackage[]{algorithm2e}
+%\usepackage[]{algorithm2e}
 %\usepackage[center]					% For cropping documents
 \usepackage{titlesec}
 \usepackage[usenames,dvipsnames]{xcolor}
@@ -26,6 +26,8 @@
 \usepackage{varioref}
 \usepackage{tabto}
 \usepackage{enumitem} % For abbrevations
+\usepackage{algorithm}
+\usepackage{algpseudocode}
 \newlist{abbrv}{itemize}{1}
 \setlist[abbrv,1]{label=,labelwidth=1in,align=parleft,itemsep=0.1\baselineskip,leftmargin=!}
 \usepackage[figuresright]{rotating} %For rotating tables
