--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,5 +1,5 @@
 @article{dorigo06,
-    author    = "Marco Dorigo,  Mauro Birattari and Thomas Stützle ",
+    author    = "Marco Dorigo and Mauro Birattari and Thomas Stützle ",
     title     = "Ant Colony Optimization: Artificial Ants as a Computational Intelligence Technique",
     journal   = "IEEE COMPUTATIONAL INTELLIGENCE MAGAZINE",
     pages     = "28-39",
