dev environment moved

--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -142,6 +142,7 @@
 \label{theModel}
 \input{chapters/model/model}
 \input{chapters/model/methodDescription}
+\input{chapters/model/developmentEnvironment}
 \input{chapters/model/algorithmAssessments}
 \input{chapters/model/routeSetRepresentation}
 \input{chapters/model/initialization}
@@ -161,7 +162,7 @@
 %\input{chapters/experimentsAndResults/experimentalPlan}
 %\input{chapters/experimentsAndResults/performanceCriteria}
 %\input{chapters/experimentsAndResults/experimentalSetup}
-\input{chapters/experimentsAndResults/developmentEnvironment}
+%\input{chapters/experimentsAndResults/developmentEnvironment}
 \input{chapters/experimentsAndResults/parameterSettings_planAndSetup}
 \input{chapters/experimentsAndResults/experimentalResults_parameterSettings}
 
