--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -135,8 +135,8 @@
 \label{relatedWork}
 \input{chapters/relatedWork/relatedWork}
 \input{chapters/relatedWork/structuredLiteratureReview}
-\input{chapters/relatedWork/relatedWorkVol4}
-\input{chapters/relatedWork/problemStatement}
+\input{chapters/relatedWork/relatedWorkVol5}
+%\input{chapters/relatedWork/problemStatement}
 
 \chapter{The Proposed Method}
 \label{theModel}
