--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -122,14 +122,14 @@
 \input{chapters/introduction/researchMethod}
 \input{chapters/introduction/thesisOverview}
 
-\chapter{Background Theory and Motivation}
+\chapter{Background Theory}
 \label{backgroundAndMotivation}
 \input{chapters/backgroundTheoryAndMotivation/backgroundTheoryAndMotivation}
 %\input{chapters/backgroundTheoryAndMotivation/backgroundTheory}
-\input{chapters/backgroundTheoryAndMotivation/vehicleRoutingProblem}
 \input{chapters/backgroundTheoryAndMotivation/swarmIntelligence}
+\input{chapters/backgroundTheoryAndMotivation/vehicleRoutingProblem}
 \input{chapters/backgroundTheoryAndMotivation/graphdatabase}
-\input{chapters/backgroundTheoryAndMotivation/motivation}
+%\input{chapters/backgroundTheoryAndMotivation/motivation}
 
 \chapter{Preparatory Research}
 \label{relatedWork}
