--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -7,7 +7,7 @@
 \usepackage[english]{babel}						% Correct English hyphenation
 \usepackage[utf8]{inputenc}						% Allow for non-English letters
 \usepackage{graphicx}							% To include graphics
-\usepackage[square,numbers]{natbib}								% Correct citations
+\usepackage{natbib}								% Correct citations
 %\usepackage{fancyheadings}						% Nice header and footer
 \usepackage[linktocpage,colorlinks]{hyperref}			% PDF hyperlink
 %\usepackage{geometry} 							% Better geometry
