--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -406,17 +406,22 @@
 }
 
 @misc{website:atb,
+    author = "AtB",
     title = "AtB",
     howpublished = "\url{http://www.atb.no}",
+    year = "2015",
     note = {Accessed: January 2015} 
 }
 @misc{website:neo4j,
+    author = "Neo4j",
     title = "Neo4j",
     howpublished = "\url{http://www.neo4j.com}",
+    year="2015",
     note = {Accessed: February 2015}  
 }
 @misc{website:graphdbranking,
     title = "DB-Engines Ranking of Graph DBMS",
+    author = "DB-Engines Ranking of Graph DBMS",
     howpublished = "\url{http://db-engines.com/en/ranking/graph+dbms}",
     note = {Accessed: March 2015}      
 }
