--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -173,17 +173,20 @@
 \input{chapters/experimentsAndResults/scalabilityExperiments_planAndSetup}
 \input{chapters/experimentsAndResults/experimentalResults_scalability}
 
-\chapter{Evaluation and Conclusion}
-\label{evaluationAndConclusion}
-\input{chapters/evaluationAndConclusion/evaluation}
+\chapter{Discussion and Conclusion}
+\label{discussionAndConclusion}
+%\input{chapters/evaluationAndConclusion/evaluation}
 %\input{chapters/evaluationAndConclusion/evaluatingMethods}
-\input{chapters/evaluationAndConclusion/evaluatingPerformanceComparison}
+%\input{chapters/evaluationAndConclusion/evaluatingPerformanceComparison}
 %\input{chapters/evaluationAndConclusion/evaluatingPerformanceComparisonV2}
-\input{chapters/evaluationAndConclusion/evaluatingScalability}
+%\input{chapters/evaluationAndConclusion/evaluatingScalability}
 %\input{chapters/evaluationAndConclusion/evaluatingNeo4j}
-%\input{chapters/evaluationAndConclusion/discussion}
-\input{chapters/evaluationAndConclusion/discussingSSO}
-\input{chapters/evaluationAndConclusion/discussingScalabilityV2}
+\input{chapters/evaluationAndConclusion/discussion}
+\input{chapters/evaluationAndConclusion/performanceComparisonDiscussion}
+\input{chapters/evaluationAndConclusion/networkExpansionDiscussion}
+
+%\input{chapters/evaluationAndConclusion/discussingSSO}
+%\input{chapters/evaluationAndConclusion/discussingScalabilityV2}
 \input{chapters/evaluationAndConclusion/conclusion}
 \input{chapters/evaluationAndConclusion/contributions}
 \input{chapters/evaluationAndConclusion/futurework}
